OO-1068: fix krpim alignement

--- a/src/main/webapp/static/themes/light/modules/_qti.scss
+++ b/src/main/webapp/static/themes/light/modules/_qti.scss
@@ -4,6 +4,10 @@ table.table.o_qti_item_kprim>thead>tr>th,table.table.o_qti_item_kprim>tbody>tr>t
 
 td.o_qti_item_kprim_input, th.o_qti_item_kprim_input {
 	text-align:center;
+	
+	.radio {
+		display:inline;
+	}
 }
 
 .o_qti_item_mattext {
